# ydibdgtch

./: .gitignore  README.md  platformio.ini
board-controller/: platformio.ini
board-controller/include/: board.h  communication.h  constants.h  ledmatrix.h
board-controller/src/: board.cpp  communication.cpp  ledmatrix.cpp  main.cpp  proof_of_concept.cpp
chess-controller/: .gitignore  platformio.ini
chess-controller/include/: boardcontroller.h  constants.h  wifi.h
chess-controller/src/: boardcontroller.cpp  main.cpp  wifi.cpp
cmake/: CMakeLists.txt
cmake/src/: emulate_config.cpp  emulate_config.h
cmake/src/cores/: Arduino.h  HardwareSerial.cpp  HardwareSerial.h  Print.cpp  Print.h  Stream.cpp  Stream.h  WCharacter.h  WString.cpp  WString.h  esp32-hal-gpio.c  esp32-hal-gpio.h  esp32-hal-uart.h  esp32-hal.h
cmake/src/libdeps/FastLED/: FastLED.cpp  FastLED.h  chipsets.h  color.h  controller.h  pixeltypes.h  platforms.h  wiring.cpp
cmake/src/libdeps/VirtualButton/: VirtualButton.h
cmake/src/libraries/DNSServer/: DNSServer.cpp  DNSServer.h
cmake/src/libraries/EEPROM/: EEPROM.cpp  EEPROM.h
cmake/src/libraries/WebServer/: HTTP_Method.h  Parsing.cpp  Uri.h  WebServer.cpp  WebServer.h
cmake/src/libraries/WebServer/detail/: RequestHandler.h  RequestHandlersImpl.h  mimetable.cpp  mimetable.h
cmake/src/libraries/WebServer/uri/: UriBraces.h  UriGlob.h  UriRegex.h
cmake/src/libraries/WiFi/: ETH.cpp  ETH.h  WiFi.cpp  WiFi.h  WiFiAP.cpp  WiFiAP.h  WiFiClient.cpp  WiFiClient.h  WiFiGeneric.cpp  WiFiGeneric.h  WiFiMulti.cpp  WiFiMulti.h  WiFiSTA.cpp  WiFiSTA.h  WiFiScan.cpp  WiFiScan.h  WiFiServer.cpp  WiFiServer.h  WiFiType.h  WiFiUdp.h
cmake/src/tools/sdk/include/driver/: gpio.h
cmake/src/tools/sdk/include/mdns/: mdns.h  mdns_console.h
cmake/src/variants/: pins_arduino.h
communication-lib/src/: commands.h  communication.cpp  communication.h
etc/ledeffects/: ledeffects.pde
include/: button.h  constants.h  ledmatrix.h  rulesengine.h  sdk.h  secret.h  senseboard.h  stateresolver.h  utilities.h  wifiinterface.h
include/interfaces/: serial.h
src/: ledmatrix.cpp  main.cpp  rulesengine.cpp  sdk.cpp  senseboard.cpp  stateresolver.cpp  wifiinterface.cpp
src/deprecated/: esp32_reedswitch_experiment.cpp  esp32_rgbledstrip_experiment.cpp
src/interfaces/: serial.cpp
tools/web_gui/: chessboard-1.0.0.min.js  controlPanel.js  index.html  style.css
